# ContractAgent

./: .gitignore  README.md
.github/: copilot-instructions.md
Azure/ContractRedlineAgent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Azure/ContractRedlineAgent/agent/: instructions.md
Azure/ContractRedlineAgent/agent/code_files/: __init__.py  docx_text.py  redline_core.py  schemas.py
Azure/ContractRedlineAgent/deploy/bicep/: main.bicep  main.json
Azure/ContractRedlineAgent/deploy/logicapps/: download_workflow.json  upload_workflow.json
Azure/ContractRedlineAgent/scripts/: deploy_agent.py  grant_graph_permissions.ps1  smoke_test.py
Azure/ContractRedlineAgent/tests/: conftest.py  test_diff.py  test_docx_text.py  test_redline_core.py
Azure/ContractRedlineAgent/tests/fixtures/: smoke_source.docx
Azure/ContractRedlineAgent/tools/: download_contract.openapi.json  upload_redlined_contract.openapi.json
ComplianceRiskAgent/: agent.mcs.yml  settings.mcs.yml
ContractAgent/: agent.mcs.yml  settings.mcs.yml
ContractIntakeAgent/: agent.mcs.yml  settings.mcs.yml
ContractRedlineTool/: .env  .env.example  README.md  client-cert.cer  deploy.ps1  openapi.json  requirements.txt  startup.sh  swagger.yml
Fabric/: Example queries.md  Instructions.md
Knowledge/: compliance-checklist.md  contract-template-nda.md  contract-template-vendor-agreement.md  corporate-procurement-policy.md  legal-review-playbook.md  sample-contract-compliant.md  sample-contract-expired-terms.md  sample-contract-high-risk.md  sample-contract-missing-clauses.md  (+1 more)
(+252 files in other folders)
